# ChangeLog for games-emulation/qmc2
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2

  30 Jul 2009; Michał Ziąbkowski <mziab@o2.pl> +qmc2-0.2_beta10.ebuild:
  Bumped.

  16 Jun 2009; Michał Ziąbkowski <mziab@o2.pl> +qmc2-0.2_beta9.ebuild:
  Bumped.

  26 May 2009; Michał Ziąbkowski <mziab@o2.pl> qmc2-0.2_beta8.ebuild:
  Fix some build system stupidity to allow both sdlmame and sdlmess backends
  to be enabled at the same time. Will probably need some further tweaking.
  Not very pretty, but works for me.

  25 May 2009; Michał Ziąbkowski <mziab@o2.pl> qmc2-0.2_beta8.ebuild:
  Fixed thinko.

  25 May 2009; Michał Ziąbkowski <mziab@o2.pl> qmc2-0.2_beta8.ebuild:
  Fixed description, doh.

  25 May 2009; Michał Ziąbkowski <mziab@o2.pl> qmc2-0.2_beta8.ebuild:
  Added proper sdlmess support.

  05 May 2009; Michał Ziąbkowski <mziab@o2.pl> -qmc2-0.2_beta6.ebuild,
  -qmc2-0.2_beta7.ebuild, qmc2-0.2_beta8.ebuild:
  Removed cruft. Fixed phonon dep.

  24 Apr 2009; Michał Ziąbkowski <mziab@o2.pl> +qmc2-0.2_beta8.ebuild:
  Bumped.

  17 Mar 2009; Michał Ziąbkowski <mziab@o2.pl> +qmc2-0.2_beta7.ebuild,
  +files/qmc2-0.2_beta7-makefile.patch:
  Bumped. Will revisit sdlmess support later.

  17 Feb 2009; Michał Ziąbkowski <mziab@o2.pl> qmc2-0.2_beta6.ebuild:
  Fixed libsdl dep.

  15 Feb 2009; Michał Ziąbkowski <mziab@o2.pl> qmc2-0.2_beta6.ebuild:
  Fixed phonon dep.

  21 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> qmc2-0.2_beta6.ebuild:
  Fixed errors reported by repoman.

  14 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> qmc2-0.2_beta6.ebuild:
  Ported to EAPI 2

  09 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> +qmc2-0.2_beta6.ebuild,
  +files/qmc2-0.2_beta6-makefile.patch, -files/qmc2-makefile.patch:
  Bumped. Removed cruft.

  20 Oct 2008; Michał Ziąbkowski <mziab@o2.pl> qmc2-0.2_beta3.ebuild,
  qmc2-0.2_beta4.ebuild:
  Fixed debug flag.

  20 Oct 2008; Michał Ziąbkowski <mziab@o2.pl> +qmc2-0.2_beta5.ebuild:
  Bumped.
