@@ -1,9 +1,5 @@
 AUX qmc2-0.2_beta6-makefile.patch 596 RMD160 5e4bd86ec03abd6dfa5c7bcf740e75f76ce66296 SHA1 1b50d2e97579ff2a3722174c8507d3ef006f0f25 SHA256 228acee8c27d205b0e91029bbbd1eb5cce40df47d42029fe9fb625e65d3c5c3a
 AUX qmc2-0.2_beta7-makefile.patch 1021 RMD160 13aec8eee75248edde7fb94a86e0e78e5925d62d SHA1 10bab3943379c58a7fd7828068e350221758a6b9 SHA256 af3b20b2190204bf188c6257eda999bf64f754001e0fed83e42a1dde67f75605
-DIST qmc2-0.2.b10.tar.bz2 2262656 RMD160 597bd2ab7fe976e6e8b723fa1c10f45ff6b0739b SHA1 c80713afe5cff0a4ac8c10446ea1511ea513e3ca SHA256 ae8fe03274f0ae6b6c345ffa5dda742ece633e22d7d775698f2ff7b56f1d7682
-DIST qmc2-0.2.b8.tar.bz2 2144670 RMD160 a33ee9d6d692328bfccb065be320f43992269b09 SHA1 d00284d879f479e8bff695bfc11d237e4c1e66fb SHA256 fcf6a681e116f1d1f78a4b1e701f40d51cc88032dd61b19487ae96ada97ab9d5
-DIST qmc2-0.2.b9.tar.bz2 2223108 RMD160 fd4189709bb8f001368a0584998e7c91e88947a2 SHA1 02d9f67aba58f2c6973e88c58b2be93cb87860fb SHA256 84cb20ee1962451edacacdba48df5233a84e8e897cccd8fe6f5b37999b5d3003
-EBUILD qmc2-0.2_beta10.ebuild 2168 RMD160 1941cd96f47ca9f64ff925cdb6af50b1c0eb8aa7 SHA1 a7c1b6096a84ad68797844f2b99eb52d769f5ef2 SHA256 d42e50dad63811d638d6860f38d9077f64143d67b313798e8a24b9c8cb9c9a80
-EBUILD qmc2-0.2_beta8.ebuild 2168 RMD160 1941cd96f47ca9f64ff925cdb6af50b1c0eb8aa7 SHA1 a7c1b6096a84ad68797844f2b99eb52d769f5ef2 SHA256 d42e50dad63811d638d6860f38d9077f64143d67b313798e8a24b9c8cb9c9a80
-EBUILD qmc2-0.2_beta9.ebuild 2168 RMD160 1941cd96f47ca9f64ff925cdb6af50b1c0eb8aa7 SHA1 a7c1b6096a84ad68797844f2b99eb52d769f5ef2 SHA256 d42e50dad63811d638d6860f38d9077f64143d67b313798e8a24b9c8cb9c9a80
-MISC ChangeLog 3411 RMD160 93b3367e5d1416b6bc58a22b114cf662e998ad5c SHA1 d1f6c94a652cdaff76815a80cb5d3023f225cf44 SHA256 da73a6f7750f8ab0ffa8fd661a1cb1b3bd45afaff07726719121fd3726f4089c
+DIST qmc2-0.2.b11.tar.bz2 2270235 RMD160 473ae85ab90f773c29c7cbe711f2d12548313dac SHA1 78c754d325889c08f15d2168c815e014e389d64a SHA256 82272e20b6ff616c074b310c5eecd2873148ebbf9d329b1668fcf9a17b2305b9
+EBUILD qmc2-0.2_beta11.ebuild 2180 RMD160 375a64d62ee9fcb02662fd4710dddb162a557997 SHA1 c6221256504884e5aafa201083c77bc285ef1b95 SHA256 95595ceffe80d6ea94aa7ec0a0f033baa3f97410e9ab4dfc46a32cd9ba71c587
+MISC ChangeLog 3603 RMD160 52ac74a382a3d69f2ad0f6fb19cb575c443df648 SHA1 1cffaa0b452223b7b1ce945fb234a1485252895c SHA256 7860b86b2fbfc0caac18fc67dcff7a8dfcf1fd428669a172811cf2113494b742
