@@ -1,6 +1,10 @@
 # ChangeLog for games-emulation/qmc2
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 
+  11 Sep 2009; Michał Ziąbkowski <mziab@o2.pl> -qmc2-0.2_beta8.ebuild,
+  -qmc2-0.2_beta9.ebuild, -qmc2-0.2_beta10.ebuild, +qmc2-0.2_beta11.ebuild:
+  Bumped and fixed Qt dep. Removed cruft.
+
   30 Jul 2009; Michał Ziąbkowski <mziab@o2.pl> +qmc2-0.2_beta10.ebuild:
   Bumped.
 
